--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="pic-wrapper">
             <div class="close" onclick="handle_pic_container()"><i
                 class="fa fa-close"></i></div>
-            <img src="images/my_pic.jpg" alt="Aritra's Photo"/>
+            <img src="my_pic.jpg" alt="Aritra's Photo"/>
         </div>
     </div>
 
@@ -174,31 +174,31 @@
                 <div class="contents">
                     <a href="#">
                         <div class="content">
-                            <div class="image"><img src="images/python_logo_black.png" /></div>
+                            <div class="image"><img src="python_logo_black.png" /></div>
                             <div class="title">Python</div>
                         </div>
                     </a>
                     <a href="#">
                         <div class="content">
-                            <div class="image"><img src="images/js_logo_black.png" /></div>
+                            <div class="image"><img src="js_logo_black.png" /></div>
                             <div class="title">Javascript</div>
                         </div>
                     </a>
                     <a href="#">
                         <div class="content">
-                            <div class="image"><img src="images/mysql_logo_black.png" /></div>
+                            <div class="image"><img src="mysql_logo_black.png" /></div>
                             <div class="title">MySQL</div>
                         </div>
                     </a>
                     <a href="https://github.com/Aritra212/CppLab.git" target="_blank">
                         <div class="content">
-                            <div class="image"><img src="images/cpp_logo_black.png" /></div>
+                            <div class="image"><img src="cpp_logo_black.png" /></div>
                             <div class="title">C++</div>
                         </div>
                     </a>
                     <a href="https://github.com/Aritra212/DataStructure.git" target="_blank">
                         <div class="content">
-                            <div class="image"><img src="images/c_logo_black.png" /></div>
+                            <div class="image"><img src="c_logo_black.png" /></div>
                             <div class="title">C</div>
                         </div>
                     </a>
