--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="wrapper">
             <div class="left">
                 <div class="logo" onclick="handle_pic_container()"></div>
-                <div class="site-name">Aritra Paul</div>
+                <div class="site-name">Utsab Paul</div>
             </div>
             <nav>
                 <ul>
