--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="about">
                 <div class="heading">About Myself</div>
                 <div class="info">
-                    <p>I am Aritra Paul and I am belongs to India. Currently I pursuing Master's in Computer Application
+                    <p>I am Aritra Paul and I belong to India. Currently I pursuing Master's in Computer Application
                         from Department of Computer Science & Engineering at University of Kalyani, West Bengal.</p>
 
                     <p>In 2022 I completed B.Sc in Computer Science with grade O (9.03 CGPA) from Siliguri College,
