contact mail sending error resolve

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="my-pic-container" id="pic-container1">
         <div class="pic-wrapper">
             <div class="close" onclick="handle_pic_container()"><i class="fa fa-close"></i></div>
-            <img src="./images/4.png" alt="Aritra's Photo" />
+            <img src="./images/my_pic_bw.png" alt="Aritra's Photo" />
         </div>
     </div>
 
@@ -283,7 +283,7 @@
             // 
             if(name!= '' && email!='' && message1!=''){
                 Email.send({
-                    SecureToken:"fb31f689-bb6e-45c8-a941-a196acd1a48",
+                    SecureToken:"40147276-f3e7-4f34-a1fa-892655d6772c",
                     To : "binarydigitofficial@gmail.com",
                     From : "binarydigitofficial@gmail.com",
                     Subject : "Contact enquiry form Portfolio by Elasticmail",
