--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                     alert("Message send successfully");
                     document.getElementById("form").reset();
                     window.history.back();
-                    window.location.replace('/')
+                    window.location.replace('/my_portfolio')
 
                 }else{
                     console.log(message);
                     alert("Error!! Message not Send");
                     window.history.back();
-                    window.location.replace('/')
+                    window.location.replace('/my_portfolio')
                 }
                 }); 
             }
