icons and projects update

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Roboto+Serif:ital,opsz,wght@1,8..144,600&family=Rubik&family=Sora:wght@700&display=swap"
         rel="stylesheet">
     <link type="text/css" href="portfolio.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scal=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scal=1.0" />
 
     <title>Aritra's World- Home page</title>
 </head>
@@ -126,12 +130,17 @@
             <div class="projects">
                 <div class="heading">Projects I have been done</div>
                 <div class="contents">
+
                     <div class="content">
                         <div class="heading">Hospital Management System</div>
                         <div class="info">
-                            <p><b>Languages Used:</b> Python, Mysql</p>
-                            <p><b>About:</b> In this project I used tkinter library to develop the UI and for
-                                database connection I used pymysql library</p>
+                            <p><b>Tecnologies Used : </b>Python, Tkinter, Sqlite3</p>
+                            <p><b>Features:</b></p>
+                            <ul>
+                                <li>Patient Management for efficient record-keeping</li>
+                                <li>Staff & Department Management for streamlined operations.</li>
+                                <li>Comprehensive Billing System with print functionality for easy record access.</li>
+                            </ul>
                         </div>
                         <div class="button-container">
                             <a href="https://github.com/Aritra212/Hospital-Management-System.git" target="_blank">
@@ -139,16 +148,55 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="content">
+                        <div class="heading">DBMS for Factory & Inventory Management</div>
+                        <div class="info">
+                            <p><b>Tecnologies Used:</b> MySQL</p>
+                            <p><b>Project Type:</b> Academic [ Collaborate with a team of 2 members] </p>
+                            <p><b>Features:</b></p>
+                            <ul>
+                                <li>Provides a Comprehensive design ( ER diagram ) for factory & inventory management system.</li>
+                                <li>Mapping of Relational Model.</li>
+                                <li>SQL codes for implementation.</li>
+                            </ul>
+                        </div>
+                        <div class="button-container">
+                            <a href="./LCD Fertilizers Database Informations.pdf" target="_blank"><div class="button">Download</div></a>
+                        </div>
+                    </div>
                     
                     <div class="content">
                         <div class="heading">Weather Forecasting Website</div>
                         <div class="info">
-                            <p><b>Languages Used:</b> Javascript</p>
-                            <p><b>About:</b> HTML and CSS is used for developing UI and js used for giving some functionality.In this project an api from openweather is used for gathering weather info.</p>
+                            <p><b>Tecnologies Used:</b>  HTML, CSS, JavaScript<br/>
+                            <b>Project Type:</b> Academic [ Collaborate with a team of 6 members] </p>
+                            <p><b>Features:</b></p>
+                            <ul>
+                                <li>Provides 7-day forecasts for user-specified locations (via GPS or manual input).</li>
+                                <li>Integrates safety tips for severe weather events(floods, cyclones, thunderstorms etc. ).</li>
+                                <li>Displays 17 weather parameters, valuable for student research and analysis.</li>
+                            </ul>
                         </div>
                         <div class="button-container">
                             <a href="https://github.com/Aritra212/WeaTherino.git" target="_blank"><div class="button">Github</div></a>
                             <a href="https://project-weatherino.netlify.app/" target="_blank"><div class="button">View</div></a>
+                        </div>
+                    </div>
+
+                    <div class="content">
+                        <div class="heading">Educational Website Using XHTML</div>
+                        <div class="info">
+                            <p><b>Tecnologies Used:</b>  XHTML, CSS, JavaScript</p>
+                            <p><b>Features:</b></p>
+                            <ul>
+                                <li>Responsive  design.</li>
+                                <li>Source Code copy feature.</li>
+                                <li>Student-friendly interface.</li>
+                            </ul>
+                        </div>
+                        <div class="button-container">
+                            <a href="https://finderror-official.blogspot.com/" target="_blank"><div class="button">View</div></a>
                         </div>
                     </div>
 
@@ -159,16 +207,7 @@
                             <p><b>About:</b> In this project I used tkinter library to develop the UI and for database connection I used pymysql library</p>
                         </div>
                     </div>
-                    <div class="content">
-                        <div class="heading">Educational Website Using XHTML</div>
-                        <div class="info">
-                            <p><b>Languages Used:</b> Javascript</p>
-                            <p><b>About:</b> In this project I used XHTML and CSS for developing UI and js for giving some functionality. The site is hosetd on blogger now.</p>
-                        </div>
-                        <div class="button-container">
-                            <a href="https://finderror-official.blogspot.com/" target="_blank"><div class="button">View</div></a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -240,7 +279,7 @@
             <div class="left" id="contact2">
                 <div class="contact">
                     <p><b>Address: &nbsp;</b>West Bengal, India</p>
-                    <p><b>Gmail: &nbsp;</b>aritrapaul20622@gmail.com</p>
+                    <p><b>Gmail: &nbsp;</b>aritrapaulpc@gmail.com</p>
                 </div>
                 <div class="s-icons">
                     <a href="https://www.instagram.com/Aritra212/" target="_blank"><i class="fa fa-instagram"></i></a>
